DefaultConversionService properly converts Object[] to int[]
Closes gh-22410